--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@web3-react/core": "^8.2.0",
+    "@web3-react/injected-connector": "^6.0.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
+    "ethers": "^6.6.3",
     "next": "^13.4.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
