--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "dependencies": {
     "@web3-react/core": "^8.2.0",
     "@web3-react/injected-connector": "^6.0.7",
+    "bufferutil": "^4.0.7",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
     "ethers": "^6.6.3",
+    "eventemitter": "^0.3.3",
+    "eventemitter3": "^5.0.1",
     "next": "^13.4.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "utf-8-validate": "^5.0.10"
   }
 }
